tests/vm/valid/load_yaml.pl.error
swipl error: exit status 2
ERROR: /tmp/TestPrologCompiler_VM_Goldenload_yaml3127880836/001/main.pl:22: user:main source_sink `"../interpreter/valid/people.yaml"' does not exist
